--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>io.github.hyggeproject</groupId>
     <artifactId>hygge-project</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>commons</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
