--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>commons</module>
+        <module>utils</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -50,6 +51,11 @@
     <!--打包插件-->
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.11.0</version>
+            </plugin>
             <plugin>
                 <!--这个插件会影响 IDEA 识别项目 compiler 的设置-->
                 <groupId>org.apache.maven.plugins</groupId>
