--- a/utils/utils-json-jackson/pom.xml
+++ b/utils/utils-json-jackson/pom.xml
@@ -3,25 +3,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hygge-project</artifactId>
+        <artifactId>utils</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>utils-definitions</module>
-        <module>utils-core</module>
-        <module>utils-json-jackson</module>
-    </modules>
-
-    <artifactId>utils</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>utils-json-jackson</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.github.hyggeproject</groupId>
+            <artifactId>utils-definitions</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
