--- a/hygge-logging/hygge-logging-log4j/pom.xml
+++ b/hygge-logging/hygge-logging-log4j/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>utils</artifactId>
+        <artifactId>hygge-logging</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>utils-json-jackson</artifactId>
+    <artifactId>hygge-logging-log4j</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -19,13 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hyggeproject</groupId>
-            <artifactId>utils-definitions</artifactId>
+            <artifactId>hygge-logging-definition</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-json</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
