--- a/hygge-logging/pom.xml
+++ b/hygge-logging/pom.xml
@@ -3,30 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>utils</artifactId>
+        <artifactId>hygge-project</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
-    <artifactId>utils-json-jackson</artifactId>
+    <artifactId>hygge-logging</artifactId>
+
+    <modules>
+        <module>hygge-logging-definition</module>
+        <module>hygge-logging-log4j</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>io.github.hyggeproject</groupId>
-            <artifactId>utils-definitions</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-json</artifactId>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 
 </project>
