--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <groupId>io.github.hyggeproject</groupId>
     <artifactId>hygge-project</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>commons</module>
         <module>utils</module>
+        <module>hygge-logging</module>
     </modules>
-    <packaging>pom</packaging>
 
     <properties>
         <hygge.version>1.0-SNAPSHOT</hygge.version>
