--- a/utils/utils-core/pom.xml
+++ b/utils/utils-core/pom.xml
@@ -10,7 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>utils-core</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,7 +20,7 @@
         <dependency>
             <groupId>io.github.hyggeproject</groupId>
             <artifactId>utils-definitions</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
