--- a/logging/logging-log4j/pom.xml
+++ b/logging/logging-log4j/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>logging</artifactId>
         <groupId>io.github.hyggeproject</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,6 +21,17 @@
             <groupId>io.github.hyggeproject</groupId>
             <artifactId>hygge-logging-definition</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.hyggeproject</groupId>
+            <artifactId>logging-definition</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
