--- a/hygge-commons-spring-boot/pom.xml
+++ b/hygge-commons-spring-boot/pom.xml
@@ -8,18 +8,25 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
-    <artifactId>logging</artifactId>
-
-    <modules>
-        <module>logging-definition</module>
-        <module>logging-log4j</module>
-    </modules>
+    <artifactId>hygge-commons-spring-boot</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.github.hyggeproject</groupId>
+            <artifactId>hygge-utils-definitions</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
