--- a/hygge-logging/hygge-logging-definition/pom.xml
+++ b/hygge-logging/hygge-logging-definition/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>utils</artifactId>
+        <artifactId>hygge-logging</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>utils-json-jackson</artifactId>
+    <artifactId>hygge-logging-definition</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -19,17 +19,16 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hyggeproject</groupId>
-            <artifactId>utils-core</artifactId>
+            <artifactId>hygge-commons-spring-boot</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.hyggeproject</groupId>
-            <artifactId>utils-json-jackson</artifactId>
-            <version>${project.parent.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-json</artifactId>
+            <artifactId>spring-boot</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
