--- a/hygge-utils/hygge-utils-definitions/pom.xml
+++ b/hygge-utils/hygge-utils-definitions/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>logging</artifactId>
+        <artifactId>hygge-utils</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>logging-definition</artifactId>
+    <artifactId>hygge-utils-definitions</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -19,17 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hyggeproject</groupId>
-            <artifactId>commons-spring-boot</artifactId>
+            <artifactId>hygge-commons</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-text</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
