--- a/hygge-utils/hygge-utils-json-jackson/pom.xml
+++ b/hygge-utils/hygge-utils-json-jackson/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>logging</artifactId>
+        <artifactId>hygge-utils</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>logging-log4j</artifactId>
+    <artifactId>hygge-utils-json-jackson</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -19,24 +19,18 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hyggeproject</groupId>
-            <artifactId>logging-definition</artifactId>
+            <artifactId>hygge-utils-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.hyggeproject</groupId>
+            <artifactId>hygge-utils-definitions</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot</artifactId>
+            <artifactId>spring-boot-starter-json</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.github.hyggeproject</groupId>
-            <artifactId>logging-definition</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
