--- a/hygge-utils/pom.xml
+++ b/hygge-utils/pom.xml
@@ -3,25 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>utils</artifactId>
+        <artifactId>hygge-project</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
-    <artifactId>utils-definitions</artifactId>
+    <modules>
+        <module>hygge-utils-definitions</module>
+        <module>hygge-utils-core</module>
+        <module>hygge-utils-json-jackson</module>
+    </modules>
+
+    <artifactId>hygge-utils</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>io.github.hyggeproject</groupId>
-            <artifactId>commons</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-    </dependencies>
 
 </project>
