添加 hygge-logging-logback 模块

--- a/hygge-logging/pom.xml
+++ b/hygge-logging/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>hygge-logging-definition</module>
         <module>hygge-logging-log4j</module>
+        <module>hygge-logging-logback</module>
     </modules>
 
     <properties>
