--- a/hygge-logging/hygge-logging-log4j/pom.xml
+++ b/hygge-logging/hygge-logging-log4j/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>io.github.hyggeproject</groupId>
             <artifactId>hygge-logging-definition</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
