--- a/hygge-logging/hygge-logging-logback/pom.xml
+++ b/hygge-logging/hygge-logging-logback/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hygge-project</artifactId>
+        <artifactId>hygge-logging</artifactId>
         <groupId>io.github.hyggeproject</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hygge-web-toolkit</artifactId>
+    <artifactId>hygge-logging-logback</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -18,27 +18,25 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.github.hyggeproject</groupId>
+            <artifactId>hygge-logging-definition</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.github.hyggeproject</groupId>
-            <artifactId>hygge-logging-logback</artifactId>
-            <version>${project.parent.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.github.hyggeproject</groupId>
-            <artifactId>hygge-utils-core</artifactId>
+            <artifactId>hygge-logging-definition</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.hyggeproject</groupId>
-            <artifactId>hygge-utils-json-jackson</artifactId>
-            <version>${project.parent.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
