hygge-logging-logback 模块可运行版本

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=web-application-example
 
+# hygge logging 和这个配置有冲突，关闭 hygge logging 才能生效
+logging.level.root=info
+
+hygge.logging.enable=true
+
 hygge.logging.scope.paths.hygge.*=true
+#hygge.logging.pattern.jsonType.enable=true
+hygge.logging.root.override.enable=true
+#hygge.logging.output.mode=FILE
+#hygge.logging.pattern.colorful.enable=false
+#hygge.logging.pattern.converter.mode=JSON_FRIENDLY
+
+hygge.logging.logback.pattern.file.namePattern=D:\\var\\log\\test-%d{yyyy-MM-dd}.%i.log
