--- a/web-application-example/pom.xml
+++ b/web-application-example/pom.xml
@@ -38,6 +38,12 @@
             <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
