支持 logging.level.root=debug 配置功能

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=web-application-example
 
-# hygge logging 和这个配置有冲突，关闭 hygge logging 才能生效
-logging.level.root=info
+logging.level.root=debug
 
-hygge.logging.enable=true
+hygge.logging.enable=false
 
 hygge.logging.scope.paths.hygge.*=true
-#hygge.logging.pattern.jsonType.enable=true
+hygge.logging.pattern.jsonType.enable=false
 hygge.logging.root.override.enable=true
 #hygge.logging.output.mode=FILE
 #hygge.logging.pattern.colorful.enable=false
