--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=web-application-example
 
-logging.level.root=debug
+#logging.level.root=debug
 
-hygge.logging.enable=false
+hygge.logging.enable=true
 
 hygge.logging.scope.paths.hygge.*=true
 hygge.logging.pattern.jsonType.enable=false
