添加 web-application-example 演示内容

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=web-application-example
 
+# 指定 spring 框架内部 jackson 默认 null 不参与序列化
+spring.jackson.default-property-inclusion=non_null
+
 #logging.level.root=debug
 
 hygge.logging.enable=true
@@ -12,3 +15,17 @@ hygge.logging.root.override.enable=true
 #hygge.logging.pattern.converter.mode=JSON_FRIENDLY
 
 hygge.logging.logback.pattern.file.namePattern=D:\\var\\log\\test-%d{yyyy-MM-dd}.%i.log
+
+# 默认开启 API 文档
+springdoc.api-docs.enabled=true
+springdoc.show-actuator=true
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+# controller 扫描路径(多个用 "," 隔开)
+springdoc.packagesToScan=hygge.controller
+# 只匹配满足下列格式的端点(多个用 "," 隔开)
+springdoc.pathsToMatch=/**
+# Tag 默认展示模式(none 代表收起)
+springdoc.swagger-ui.docExpansion=none
+# Schemas 栏默认展开层次(0 代表收起)
+springdoc.swagger-ui.defaultModelsExpandDepth=0
