添加 HttpHelper 具体实现

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -3,6 +3,15 @@ spring.application.name=web-application-example
 # 指定 spring 框架内部 jackson 默认 null 不参与序列化
 spring.jackson.default-property-inclusion=non_null
 
+# httpHelper 工具配置项
+hygge.utils.httpHelper.default.autoRegister=true
+hygge.utils.httpHelper.default.ignoreSSL=false
+hygge.utils.httpHelper.default.logType=NO_RESPONSE_HEADERS
+hygge.utils.httpHelper.default.connection.connectTimeOut=1S
+hygge.utils.httpHelper.default.connection.readTimeOut=1S
+hygge.utils.httpHelper.default.connection.maxTotal=40
+hygge.utils.httpHelper.default.connection.maxPerRoute=10
+
 #logging.level.root=debug
 
 hygge.logging.enable=true
