--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=web-application-example
 # 指定 spring 框架内部 jackson 默认 null 不参与序列化
 spring.jackson.default-property-inclusion=non_null
 
+# controller 层日志配置项
+hygge.web-toolkit.controller.log.autoRegister=true
+
 # httpHelper 工具配置项
 hygge.utils.httpHelper.default.autoRegister=true
 hygge.utils.httpHelper.default.ignoreSSL=false
