添加 hyggeLogging 配置项提示

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -10,23 +10,21 @@ hygge.web-toolkit.controller.log.autoRegister=true
 hygge.utils.httpHelper.default.autoRegister=true
 hygge.utils.httpHelper.default.ignoreSSL=false
 hygge.utils.httpHelper.default.logType=NO_RESPONSE_HEADERS
-hygge.utils.httpHelper.default.connection.connectTimeOut=1S
-hygge.utils.httpHelper.default.connection.readTimeOut=1S
-hygge.utils.httpHelper.default.connection.maxTotal=40
-hygge.utils.httpHelper.default.connection.maxPerRoute=10
+hygge.utils.httpHelper.default.connection.connectTimeOut=10S
+hygge.utils.httpHelper.default.connection.readTimeOut=60S
+hygge.utils.httpHelper.default.connection.maxTotal=400
+hygge.utils.httpHelper.default.connection.maxPerRoute=200
 
-#logging.level.root=debug
-
+# hyggeLogging 配置
 hygge.logging.enable=true
-
 hygge.logging.scope.paths.hygge.*=true
 hygge.logging.pattern.jsonType.enable=false
-hygge.logging.root.override.enable=true
-#hygge.logging.output.mode=FILE
-#hygge.logging.pattern.colorful.enable=false
-#hygge.logging.pattern.converter.mode=JSON_FRIENDLY
-
-hygge.logging.logback.pattern.file.namePattern=D:\\var\\log\\test-%d{yyyy-MM-dd}.%i.log
+hygge.logging.rootOverride.enable=true
+hygge.logging.output.mode=CONSOLE
+hygge.logging.pattern.colorful.enable=true
+hygge.logging.pattern.converter.mode=DEFAULT
+hygge.logging.logback.pattern.fileNamePattern.hygge=D:\\var\\log\\hygge-%d{yyyy-MM-dd}.%i.log
+hygge.logging.logback.pattern.fileNamePattern.root=D:\\var\\log\\root-%d{yyyy-MM-dd}.%i.log
 
 # 默认开启 API 文档
 springdoc.api-docs.enabled=true
