--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -25,6 +25,7 @@ hygge.logging.pattern.colorful.enable=true
 hygge.logging.pattern.converter.mode=DEFAULT
 hygge.logging.logback.pattern.fileNamePattern.hygge=D:\\var\\log\\hygge-%d{yyyy-MM-dd}.%i.log
 hygge.logging.logback.pattern.fileNamePattern.root=D:\\var\\log\\root-%d{yyyy-MM-dd}.%i.log
+hygge.logging.log4j.pattern.file.path=D:\\var\\log\\
 
 # 默认开启 API 文档
 springdoc.api-docs.enabled=true
