--- a/hygge-web-toolkit/pom.xml
+++ b/hygge-web-toolkit/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>hygge-project</artifactId>
-        <groupId>io.github.hyggeproject</groupId>
+        <groupId>io.github.soupedog</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -30,17 +30,17 @@
             <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.github.hyggeproject</groupId>
+            <groupId>io.github.soupedog</groupId>
             <artifactId>hygge-logging-logback</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.hyggeproject</groupId>
+            <groupId>io.github.soupedog</groupId>
             <artifactId>hygge-utils-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.hyggeproject</groupId>
+            <groupId>io.github.soupedog</groupId>
             <artifactId>hygge-utils-json-jackson</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
