--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <groupId>io.github.hyggeproject</groupId>
+    <groupId>io.github.soupedog</groupId>
     <artifactId>hygge-project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
