后端 新增 controller 层日志切面优先级配置项

--- a/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -105,6 +105,12 @@
       "name": "hygge.web-toolkit.controller.log.autoRegister",
       "type": "java.lang.Boolean",
       "defaultValue": true
+    },
+    {
+      "sourceType": "hygge.web.utils.log.configuration.ControllerLogConfiguration",
+      "name": "hygge.web-toolkit.controller.log.aspectOrder",
+      "type": "java.lang.Integer",
+      "defaultValue": 2147483645
     }
   ]
 }
