--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=web-application-example
 
-# 指定 spring 框架内部 jackson 默认 null 不参与序列化
+# \u6307\u5B9A spring \u6846\u67B6\u5185\u90E8 jackson \u9ED8\u8BA4 null \u4E0D\u53C2\u4E0E\u5E8F\u5217\u5316
 spring.jackson.default-property-inclusion=non_null
 
-# controller 层日志配置项
+# controller \u5C42\u65E5\u5FD7\u662F\u5426\u5F00\u542F
 hygge.web-toolkit.controller.log.autoRegister=true
+# controller \u5C42\u65E5\u5FD7\u5207\u9762\u4F18\u5148\u7EA7(\u9ED8\u8BA4\u503C\u4E3A Ordered.LOWEST_PRECEDENCE - 2)
+hygge.web-toolkit.controller.log.aspectOrder=0
 
-# httpHelper 工具配置项
+# httpHelper \u5DE5\u5177\u914D\u7F6E\u9879
 hygge.utils.httpHelper.default.autoRegister=true
 hygge.utils.httpHelper.default.ignoreSSL=false
 hygge.utils.httpHelper.default.logType=NO_RESPONSE_HEADERS
@@ -15,7 +17,7 @@ hygge.utils.httpHelper.default.connection.readTimeOut=60S
 hygge.utils.httpHelper.default.connection.maxTotal=400
 hygge.utils.httpHelper.default.connection.maxPerRoute=200
 
-# hyggeLogging 配置
+# hyggeLogging \u914D\u7F6E
 hygge.logging.enable=true
 hygge.logging.scope.paths.hygge.*=true
 hygge.logging.pattern.jsonType.enable=false
@@ -27,16 +29,16 @@ hygge.logging.logback.pattern.fileNamePattern.hygge=D:\\var\\log\\hygge-%d{yyyy-
 hygge.logging.logback.pattern.fileNamePattern.root=D:\\var\\log\\root-%d{yyyy-MM-dd}.%i.log
 hygge.logging.log4j.pattern.file.path=D:\\var\\log\\
 
-# 默认开启 API 文档
+# \u9ED8\u8BA4\u5F00\u542F API \u6587\u6863
 springdoc.api-docs.enabled=true
 springdoc.show-actuator=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
-# controller 扫描路径(多个用 "," 隔开)
+# controller \u626B\u63CF\u8DEF\u5F84(\u591A\u4E2A\u7528 "," \u9694\u5F00)
 springdoc.packagesToScan=hygge.controller
-# 只匹配满足下列格式的端点(多个用 "," 隔开)
+# \u53EA\u5339\u914D\u6EE1\u8DB3\u4E0B\u5217\u683C\u5F0F\u7684\u7AEF\u70B9(\u591A\u4E2A\u7528 "," \u9694\u5F00)
 springdoc.pathsToMatch=/**
-# Tag 默认展示模式(none 代表收起)
+# Tag \u9ED8\u8BA4\u5C55\u793A\u6A21\u5F0F(none \u4EE3\u8868\u6536\u8D77)
 springdoc.swagger-ui.docExpansion=none
-# Schemas 栏默认展开层次(0 代表收起)
+# Schemas \u680F\u9ED8\u8BA4\u5C55\u5F00\u5C42\u6B21(0 \u4EE3\u8868\u6536\u8D77)
 springdoc.swagger-ui.defaultModelsExpandDepth=0
