修正 hygge-logging 配置项默认值

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -25,8 +25,14 @@ hygge.logging.rootOverride.enable=true
 hygge.logging.output.mode=CONSOLE
 hygge.logging.pattern.colorful.enable=true
 hygge.logging.pattern.converter.mode=DEFAULT
+# hyggeLogging logback \u72EC\u5360(\u672A\u542F\u7528\u5BF9\u5E94\u65E5\u5FD7\u7EC4\u4EF6\u65F6\u914D\u7F6E\u9879\u65E0\u6548)
+hygge.logging.logback.pattern.file.maxHistory=0
+hygge.logging.logback.pattern.file.maxSize=2MB
 hygge.logging.logback.pattern.fileNamePattern.hygge=D:\\var\\log\\hygge-%d{yyyy-MM-dd}.%i.log
 hygge.logging.logback.pattern.fileNamePattern.root=D:\\var\\log\\root-%d{yyyy-MM-dd}.%i.log
+# hyggeLogging log4j \u72EC\u5360(\u672A\u542F\u7528\u5BF9\u5E94\u65E5\u5FD7\u7EC4\u4EF6\u65F6\u914D\u7F6E\u9879\u65E0\u6548)
+hygge.logging.log4j.pattern.file.cron=0 0 0 * * ?
+hygge.logging.log4j.pattern.file.maxSize=2MB
 hygge.logging.log4j.pattern.file.path=D:\\var\\log\\
 
 # \u9ED8\u8BA4\u5F00\u542F API \u6587\u6863
