hygge-logging-logback 新增日志输出模式 CONSOLE_AND_FILE

--- a/hygge-logging/hygge-logging-definition/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/hygge-logging/hygge-logging-definition/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -77,6 +77,9 @@
         },
         {
           "value": "FILE"
+        },
+        {
+          "value": "CONSOLE_AND_FILE"
         }
       ]
     }
@@ -119,9 +122,15 @@
     },
     {
       "sourceType": "hygge.logging.configuration.HyggeLogConfiguration",
-      "name": "hygge.logging.pattern.colorful.enable",
+      "name": "hygge.logging.pattern.colorful.console.enable",
       "type": "java.lang.Boolean",
       "defaultValue": true
+    },
+    {
+      "sourceType": "hygge.logging.configuration.HyggeLogConfiguration",
+      "name": "hygge.logging.pattern.colorful.file.enable",
+      "type": "java.lang.Boolean",
+      "defaultValue": false
     },
     {
       "sourceType": "hygge.logging.configuration.HyggeLogConfiguration",
