--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -23,7 +23,8 @@ hygge.logging.scope.paths.hygge.*=true
 hygge.logging.pattern.jsonType.enable=false
 hygge.logging.rootOverride.enable=true
 hygge.logging.output.mode=CONSOLE
-hygge.logging.pattern.colorful.enable=true
+hygge.logging.pattern.colorful.console.enable=true
+hygge.logging.pattern.colorful.file.enable=false
 hygge.logging.pattern.converter.mode=DEFAULT
 # hyggeLogging logback \u72EC\u5360(\u672A\u542F\u7528\u5BF9\u5E94\u65E5\u5FD7\u7EC4\u4EF6\u65F6\u914D\u7F6E\u9879\u65E0\u6548)
 hygge.logging.logback.pattern.file.maxHistory=0
