--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=web-application-example
-
 # \u6307\u5B9A spring \u6846\u67B6\u5185\u90E8 jackson \u9ED8\u8BA4 null \u4E0D\u53C2\u4E0E\u5E8F\u5217\u5316
 spring.jackson.default-property-inclusion=non_null
+# \u8C03\u8BD5\u65F6\u5F00\u542F\u6240\u6709\u7AEF\u70B9
+management.endpoints.web.exposure.include=*
 
 # controller \u5C42\u65E5\u5FD7\u662F\u5426\u5F00\u542F
 hygge.web-toolkit.controller.log.autoRegister=true
