hygge-utils 模块更名为 hygge-util

--- a/hygge-commons-spring-boot/pom.xml
+++ b/hygge-commons-spring-boot/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.soupedog</groupId>
-            <artifactId>hygge-utils-definitions</artifactId>
+            <artifactId>hygge-util-definition</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
