--- a/hygge-web-toolkit/pom.xml
+++ b/hygge-web-toolkit/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.soupedog</groupId>
-            <artifactId>hygge-utils-json-jackson</artifactId>
+            <artifactId>hygge-util-json-jackson</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
