修正配置项

--- a/hygge-logging/hygge-logging-definition/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/hygge-logging/hygge-logging-definition/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -150,13 +150,13 @@
     {
       "sourceType": "hygge.logging.configuration.base.HyggeLogConfiguration",
       "name": "hygge.logging.pattern.converter.mode",
-      "type": "java.lang.String",
+      "type": "hygge.logging.enums.ConverterModeEnum",
       "defaultValue": "DEFAULT"
     },
     {
       "sourceType": "hygge.logging.configuration.base.HyggeLogConfiguration",
       "name": "hygge.logging.output.mode",
-      "type": "java.lang.String"
+      "type": "hygge.logging.enums.OutputModeEnum"
     },
     {
       "sourceType": "hygge.logging.configuration.base.HyggeLogConfiguration",
