--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -10,13 +10,13 @@ hygge.web-toolkit.controller.log.autoRegister=true
 hygge.web-toolkit.controller.log.aspectOrder=0
 
 # httpHelper \u5DE5\u5177\u914D\u7F6E\u9879
-hygge.utils.httpHelper.default.autoRegister=true
-hygge.utils.httpHelper.default.ignoreSSL=false
-hygge.utils.httpHelper.default.logType=NO_RESPONSE_HEADERS
-hygge.utils.httpHelper.default.connection.connectTimeOut=10S
-hygge.utils.httpHelper.default.connection.readTimeOut=60S
-hygge.utils.httpHelper.default.connection.maxTotal=400
-hygge.utils.httpHelper.default.connection.maxPerRoute=200
+hygge.util.httpHelper.default.autoRegister=true
+hygge.util.httpHelper.default.ignoreSSL=false
+hygge.util.httpHelper.default.logType=NO_RESPONSE_HEADERS
+hygge.util.httpHelper.default.connection.connectTimeOut=10S
+hygge.util.httpHelper.default.connection.readTimeOut=60S
+hygge.util.httpHelper.default.connection.maxTotal=400
+hygge.util.httpHelper.default.connection.maxPerRoute=200
 
 # hyggeLogging \u914D\u7F6E
 hygge.logging.enable=true
