新增校验模块

--- a/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -111,6 +111,19 @@
       "name": "hygge.web-toolkit.controller.log.aspectOrder",
       "type": "java.lang.Integer",
       "defaultValue": 2147483645
+    },
+    {
+      "sourceType": "hygge.commons.spring.config.configuration.inner.HyggeCodeValidatorConfiguration",
+      "name": "hygge.web-toolkit.validator.hyggeCode.basePackages",
+      "type": "java.lang.String",
+      "description": "自定义 HyggeCode 所在包路径，多个时用 \",\" 分隔"
+    },
+    {
+      "sourceType": "hygge.commons.spring.config.configuration.inner.HyggeCodeValidatorConfiguration",
+      "name": "hygge.web-toolkit.validator.hyggeCode.uniqueEnable",
+      "type": "java.lang.Boolean",
+      "defaultValue": false,
+      "description": "HyggeCode 唯一性检测是否开启"
     }
   ]
 }
